# sensei

./: .env.dev  .gitignore  .mcp.json  AGENTS.md  Brewfile  CLAUDE.md  Cargo.toml  Makefile  PATTERNS.md  README.md  Tiltfile  backlog.md  bump-version.sh  catalog.json  install.sh  package.json  playwright.config.ts  rokkit.config.js  sumi-palette.js  uno.config.js  vite.config.ts  vitest.config.ts
.claude/: settings.json
.githooks/: pre-commit
.sensei/: README.md  agent-skills.json  config.yaml  doc-index.json  guardrails.md  llms.txt  llmspec-expected.yaml  llmspec.yaml  patterns.md  rules.md  setup.md  shortcuts.md  stack.md  state.yaml  symbol-map.json  traceability.json
Casks/: sensei-app.rb  sensei.rb
Formula/: sensei.rb
app/: .gitignore  (+7 more)
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json  e2e.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: flog.rs  lib.rs  log_collector.rs  main.rs
app/src-tauri/src/commands/: assistants.rs  bootstrap.rs  logs.rs  mod.rs  platform_info.rs  repos.rs  update.rs
app/src-tauri/tests/: bootstrap_integration.rs
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: config.rs  database.rs  hardware.rs  homebrew.rs  lib.rs  models.rs  service.rs  tracing_init.rs  types.rs  upgrade.rs  util.rs
crates/bootstrap/src/_legacy/prereq/: checker.rs  ids.rs
crates/bootstrap/src/health/: checker.rs  graph.rs  ids.rs  mod.rs  process_util.rs  provider.rs  resolver.rs  types.rs
crates/bootstrap/src/health/checkers/: binary.rs  composite.rs  mod.rs  port.rs  postgres_db.rs
crates/bootstrap/src/health/resolvers/: brew_bundle.rs  brew_helpers.rs  daemon_start.rs  db_setup.rs  mod.rs  ollama_install.rs  postgres_install.rs  sensei_install.rs  service_cascade.rs
crates/bootstrap/src/platform/: macos.rs  mod.rs  windows.rs
crates/bootstrap/src/prereq/: checker.rs  engine.rs  factory.rs  fixer.rs  generic.rs  mod.rs  registry.rs  runner.rs
crates/bootstrap/tests/: json_wire_shape.rs
crates/cli/: Cargo.toml
crates/cli/src/: doctor.rs  main.rs
crates/gateway/: Cargo.toml
crates/gateway-embedded/: Cargo.toml
crates/gateway-embedded/src/: lib.rs  math.rs  registry.rs
crates/gateway-embedded/src/adapters/: fastembed.rs  llama_cpp.rs  mod.rs  ort.rs
crates/gateway-embedded/src/registry/: external.rs  managed.rs  mod.rs  ollama.rs
crates/gateway/src/: budget.rs  circuit_breaker.rs  config.rs  engine.rs  lib.rs  purpose.rs  selection.rs  store.rs
crates/gateway/src/adapters/: anthropic.rs  async_job.rs  base.rs  bedrock.rs  fal.rs  flux.rs  gemini.rs  grok.rs  kling.rs  luma.rs  mod.rs  noop.rs  ollama.rs  openai.rs  recraft.rs  replicate.rs  runway.rs  stability.rs  together.rs
crates/gateway/src/types/: capability.rs  config.rs  cost.rs  error.rs  mod.rs  request.rs
crates/gateway/tests/: adapter_integration.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs  logger.rs  types.rs  writer.rs
crates/senseid/: Cargo.toml
crates/senseid/src/: acp.rs  installer.rs  ir.rs  main.rs  paths.rs  types.rs
crates/senseid/src/adapters/: c_lang.rs  common.rs  java.rs  kotlin.rs  mod.rs  python.rs  rust_lang.rs  sql.rs  svelte.rs  swift.rs  typescript.rs  vue.rs
crates/senseid/src/api/: events.rs  gateway_embedded.rs  gateway_init.rs  mod.rs  routes.rs  server.rs  state.rs  util.rs
crates/senseid/src/api/handlers/: codebase.rs  config.rs  gateway.rs  gateway_image.rs  gateway_routers.rs  health.rs  instruments.rs  knowledge.rs  libraries.rs  logs.rs  mcp.rs  mod.rs  observatory.rs  project_detail.rs  query.rs  scan_events.rs  sessions.rs  workspace.rs
crates/senseid/src/assistants/: claude_code.rs  helpers.rs  mcp_file.rs  mod.rs  trait_def.rs
crates/senseid/src/config/: detector.rs  mod.rs
crates/senseid/src/db/: mod.rs  pg_store.rs  store.rs
crates/senseid/src/db/entities/: config.rs  detected_patterns.rs  events.rs  excluded_paths.rs  index_errors.rs  lib_docs.rs  mod.rs  projects.rs  repos.rs  sessions.rs  tags.rs  workflow_state.rs
crates/senseid/src/gateway_keys/: mod.rs
crates/senseid/src/gateway_routers/: mod.rs
crates/senseid/src/indexer/: community.rs  cross_repo.rs  doc_indexer.rs  framework_tagger.rs  graph.rs  lib_indexer.rs  llms_indexer.rs  manifest.rs  mod.rs  pattern_detector.rs  pipeline.rs  queue.rs  worker.rs
crates/senseid/src/indexer/graph/: branches.rs  community.rs  doc_drift.rs  edges.rs  ir_readwrite.rs  mod.rs  nodes.rs  refs.rs  wrappers.rs
crates/senseid/src/installer/: catalog.rs  install.rs  marketplace.rs  mod.rs  removal.rs
crates/senseid/src/instruments/: mod.rs
crates/senseid/src/languages/: c_lang.rs  common.rs  java.rs  kotlin.rs  mod.rs  python.rs  rust_lang.rs  sql.rs  svelte.rs  swift.rs  typescript.rs  vue.rs
crates/senseid/src/tasks/: executor.rs  file_processor.rs  handlers.rs  integration_tests.rs  mod.rs  progress.rs  progress_emitter.rs  queue.rs
crates/senseid/src/tasks/handlers/: community.rs  helpers.rs  libraries.rs  mod.rs  process.rs  resolve.rs  scan.rs  scan_logic.rs  verdicts.rs
crates/senseid/src/tasks/processors/: code.rs  config.rs  doc.rs  graph_writer.rs  metadata.rs  mod.rs  router.rs  tests.rs  types.rs
crates/senseid/src/tasks/processors/metadata/: external_links.rs  icons.rs  mod.rs  solutions.rs  summary.rs
crates/senseid/src/watcher/: dirty_tracker.rs  mod.rs  repo_watcher.rs  root_watcher.rs
crates/senseid/tests/: e2e_index.rs  e2e_scan.rs  e2e_server.rs  events.rs  knowledge_api.rs  scan_lifecycle.rs
crates/senseid/tests/fixtures/code/: +page.svelte  appstate.svelte.ts
crates/senseid/tests/fixtures/config/: package.json
crates/senseid/tests/fixtures/docs/: architecture.md  gap-analysis.md  idea-workflow.md  task-queue.md  workflow-commands.md
crates/senseid/tests/fixtures/extensions/: analyze-skill.md
daemon/crates/mcp/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  log_collector.rs
src-tauri/src/commands/: bootstrap.rs  mod.rs  repos.rs
src-tauri/tests/: bootstrap_integration.rs
(+1794 files in other folders)
