[package]
name = "sensei-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "sensei_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
ureq = { version = "2", features = ["json"] }
sensei-bootstrap = { path = "../../daemon/crates/bootstrap" }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"
