[workspace]

[package]
name = "sensei-desktop"
version = "0.2.15"
edition = "2021"

[features]
dev = ["sensei-bootstrap/dev"]
e2e-testing = ["tauri-plugin-playwright"]

[lib]
name = "sensei_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
ureq = { version = "2", features = ["json"] }
sensei-bootstrap = { path = "../../crates/bootstrap" }
tauri-plugin-playwright = { version = "0.2", optional = true }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.34"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"
