[package]
name = "sensei-bootstrap"
version = "0.1.0"
edition = "2021"
description = "Prerequisite detection, installation, and hardware profiling for sensei"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.34"
tokio = { version = "1", features = ["process", "time", "rt"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
dbd-core = { path = "../../../../dbd-rs/crates/dbd-core" }
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
