[package]
name = "sensei-bootstrap"
version = "0.2.15"
edition = "2021"
description = "Prerequisite detection, installation, and hardware profiling for sensei"

[features]
# Compile-time mode flag.
# `dev`: port 7745, sensei_dev database, ~/.sensei-dev/
# Default (no feature): port 7744, sensei database, ~/.sensei/
dev = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.34"
tokio = { version = "1", features = ["process", "time", "rt"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dbd-core = { git = "https://github.com/sensei-hq/dbd", tag = "v0.4.1" }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
