[package]
name = "sensei-cli"
version = "0.2.2"
edition = "2024"
description = "Sensei CLI — initialize and manage sensei for AI coding"

[[bin]]
name = "sensei"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "blocking"] }
