[package]
name = "sensei-mcp"
version = "0.2.2"
edition = "2024"
description = "Sensei MCP server — wraps senseid daemon for Claude Code integration"

[[bin]]
name = "sensei-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
